[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

size = 60
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D" groups=[
"Persistent",
]]
script = ExtResource( 1 )

[node name="MainMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 600.0
margin_right = 390.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[node name="Statistics" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 480.0
margin_right = 390.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
text = "Statistics"

[node name="MissingScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 480.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
autowrap = true

[node name="GameOverMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 100.0
margin_right = 440.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 3 )
text = "Game Over!"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Statistics" to="." method="_on_Statistics_pressed"]
